# DiffPriv

./: .gitignore  Cargo.toml  LICENSE  README.tpl  application.conf  knn-test.sh  readme.md
datasets/: Adult_1_numeric_only_class_50K.csv  Adult_2_numerical_categorical_class_50K_drift.csv  adult_test.arff  steps-converted.csv
src/: config.rs  lib.rs  main.rs  vec_set.rs
src/analysis/: analyser.rs  cluster_analyser.rs  disclosure_risk_analyser.rs  mod.rs  mse_analyser.rs  publishing_delay_analyser.rs  sse_analyser.rs
src/anonymization/: buffer.rs  cluster.rs  microagg_anonymizer.rs  mod.rs
src/data_manipulation/: aggregation.rs  anonymizable.rs  mod.rs  mueller.rs
src/kafka/: kafka_service.rs  mod.rs
src/noise/: mod.rs  noiser.rs
src/noise/laplace/: categorical_noiser.rs  laplace_noiser.rs  mod.rs  numerical_noiser.rs
src/publishing/: kafka_publisher.rs  mod.rs  publisher.rs
src/test/: adult.rs  adult_large.rs  csv_exporter.rs  csv_importer.rs  csv_publisher.rs  dummy_publisher.rs  environment.rs  metrics.rs  mod.rs  tests.rs
