[package]
name = "diff-priv"
version = "0.1.0"
edition = "2021"
authors = ["Maciek Mika maciek@strmprivacy.io"]
description = "k-anonymity, (c,l)-diversity and ε-differential privacy data streaming framework"
repository = "https://github.com/redwhitemike/DiffPriv"
license = "MIT"

[[bin]]
name = "diff-priv"
path = "src/main.rs"
doc = false

[lib]
name = "diff_priv"
path = "src/lib.rs"

[dependencies]
serde = {version = "1.0.137", features = ["derive"]}
kafka = "0.9.0"
avro-rs = { version = "0.13.0" }
strm-privacy-driver = "0.1.1"
bincode = "1.3.3"
hocon = "0.9.0"
num = "0.4"
itertools = "0.10"
rand = "0.8.5"
float_next_after = "0.1.5"
rand_distr = "0.4.3"
kolmogorov_smirnov = "1.1.0"
log = "0.4"
pretty_env_logger = "0.4"
csv = "1.1.6"
bimap = "0.6.2"
lazy_static = "1.4.0"
rayon = "1.5"
uuid = "1.1"
serde_json = "1.0.82"
polars = { version = "0.23", features = ["simd", "lazy", "csv-file", "fmt", "json"]}
